changed all the text to string.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,69 @@ Over time Ramses Square turned out to be an unsuitable location, as the statue w
     <string name="sultan_hassa_madrasah">The Mosque-Madrassa of Sultan Hassan is a massive mosque and madrassa located in the Old city of Cairo, it was built during the Mamluk Islamic era in Egypt. Its construction began 757 AH/1356 CE with work ending three years later "without even a single day of idleness".[1] At the time of construction the mosque was considered remarkable for its fantastic size and innovative architectural components. Commissioned by an-Nasir Hasan, a sultan of a short and relatively unimpressive profile, al-Maqrizi noted that within the mosque were several "wonders of construction".[1] The mosque was, for example, designed to include schools for all four of the Sunni schools of thought: Shafi'i, Maliki, Hanafi and Hanbali</string>
     <string name="al_hussin">he Al-Hussain Mosque is a mosque built in 1154 The mosque is located in Cairo, Egypt, near the Khan El-Khalili bazaar. It is considered to be one of the holiest Islamic sites in Egypt. The mosque was built on the cemetery of the Fatimid caliphs, though this was not known until the site\'s archaeological </string>
     <string name="feedpack">FeedBack</string>
+    <string name="opens_at_9">opens at 9 am</string>
+    <string name="koshary_onformation">one of the most famous Egyptian food ever</string>
+    <string name="koshary_eltahreer__phone">tel:19719</string>
+    <string name="koshary_eltahreer_website">http://koshary-eltahrir.com/</string>
+    <string name="koshary_location">geo:29.979487, 31.134250</string>
+    <string name="kabab_name">Kabab</string>
+    <string name="kabab_info">Kebabs (also kabobs or kababs) are various cooked meat dishes, with their origins in Middle Eastern cuisine</string>
+    <string name="kabab_location">geo:30.029080, 31.259514</string>
+    <string name="kabab_pnone">tel: 0100 734 2507</string>
+    <string name="kabab_websit"><![CDATA[https://www.elmenus.com/ar/cairo/search-%D9%85%D8%B4%D9%88%D9%8A%D8%A7%D8%AA?delivery=1&isopen=0]]></string>
+    <string name="flafel_name">Flafel</string>
+    <string name="flafel_info">Falafel is a common food eaten in the Middle East.</string>
+    <string name="flafel_location">geo: 30.052484, 31.262578\\n\" +  \"\\n,?z=18</string>
+    <string name="flafel_phone">tel: 011 54265654</string>
+    <string name="flafel_websit">https://www.facebook.com/s7emy.house/</string>
+    <string name="al_azhar_mosqe_name">Al-Azhar Mosque</string>
+    <string name="opens_all_the_time">opens all the time</string>
+    <string name="al_azhar_info">Al-Azhar Mosque is an Egyptian mosque in Islamic Cairo.</string>
+    <string name="al_azhar_location">geo:30.032562, 31.256203</string>
+    <string name="al_azhar_phone">tel:45345354645</string>
+    <string name="al_azhar_website">https://www.memphistours.com/Egypt/Egypt-Wikis/Cairo-Attractions/wiki/Al-Azhar-Mosque-Cairo</string>
+    <string name="sultan_hassan_name">Sultan Hassan Madrasah</string>
+    <string name="sultan_hassan_info">The Mosque-Madrassa of Sultan Hassan is a massive mosque and madrassa located in the Old city of Cairo</string>
+    <string name="sultan_hassan_location">geo:30.029080, 31.259514</string>
+    <string name="sultanhassan_phone">tel: 0100 734 2507</string>
+    <string name="sultan_hassan_websit">http://www.touregypt.net/featurestories/hassanmosque.htm</string>
+    <string name="el_hussin_name">Al-Hussein Mosque</string>
+    <string name="el_hussin_info">The Al-Hussain Mosque is a mosque built in 1154 The mosque is located in Cairot.</string>
+    <string name="el_hussin_location">geo: 30.048111, 31.262997</string>
+    <string name="el_hussin_phone">tel: 011 54245465654</string>
+    <string name="el_hussin_websit">https://www.memphistours.co.uk/Egypt/Egypt-Travel-Guide/Cairo-Attractions/wiki/Mosque-of-Saiyidna-Hussein</string>
+    <string name="pyramids_name">Pyramids of Giza</string>
+    <string name="pyramids_info">one of the 7 amazies of the world</string>
+    <string name="pyramids_location">geo:29.979487, 31.134250</string>
+    <string name="pyramids_phone">tel:02 257445694596\"</string>
+    <string name="pyramids_websit">http://www.sca-egypt.org/eng/SITE_GIZA_MP.htm</string>
+    <string name="mit_rahina_name">Mit Rahina Museum Colossus of Ramses II</string>
+    <string name="mit_rahina_info">The Statue of Ramesses II is a 3,200-year-old figure of Ramesses II</string>
+    <string name="mit_rahina_location">geo:29.29.795554, 31.246710</string>
+    <string name="mit_rahina_phone">tel: 555555</string>
+    <string name="mit_rahina_websit">https://www.lonelyplanet.com/egypt/saqqara-memphis-dahshur/attractions/mit-rahina/a/poi-sig/1427164/1330429</string>
+    <string name="dahsour_name">Dahshur</string>
+    <string name="dashour_info">An ancient pyramed made before the three famous pyrameds from around th 5 centireis which located in Dahshour village i Egypt</string>
+    <string name="dahsour_location">geo: 30.052484, 31.262578</string>
+    <string name="dahsour_phone">tel: 011 54265654</string>
+    <string name="dahsour_website">https://www.facebook.com/s7emy.house/</string>
+    <string name="egyptian_museame_name">Egyptian Museum Cairo</string>
+    <string name="egyptian_museame_info">Tracing 5.000 years of ancient epyptian history</string>
+    <string name="egyptian_museame_location">geo:30.047968, 31.233809</string>
+    <string name="egyptian_museame_pjone">tel:02 25794596</string>
+    <string name="egyptian_museame_website">http://www.antiquities.gov.eg/DefaultEn/Museum/Pages/MuseumDetails.aspx?MusCode=28#</string>
+    <string name="mohamed_ali_name">Mohamed Ali Mosqe</string>
+    <string name="mohamed_ali_info">Built in 18 centiries in the middle of Saladin casitle</string>
+    <string name="mohamed_ali_location">geo:30.029080, 31.259514</string>
+    <string name="mohamed_ali_phone">tel: 555555</string>
+    <string name="mohamed_ali_websit">https://www.marefa.org/%D9%85%D8%B3%D8%AC%D8%AF_%D9%85%D8%AD%D9%85%D8%AF_%D8%B9%D9%84%D9%8A</string>
+    <string name="el_suhimi_house_name">El Suhimi house</string>
+    <string name="el_suhimi_house_info">An ancient house from the 5 centireis which located in Al mo\'es streat</string>
+    <string name="el_suhimi_house_location">geo: 30.052484, 31.262578</string>
+    <string name="el_suhimi_house_phone">tel: 011 54265654</string>
+    <string name="el_suhimi_house_websit">https://www.facebook.com/s7emy.house/</string>
+    <string name="islamic_museum_location">geo:30.045495, 31.252196</string>
+    <string name="islamic_museum_phone">tel:02 23901520</string>
+    <string name="sultan_hassan_name2">Sultan Hassan Madrasah</string>
+    <item name="opens_at_9" type="id">opens at 9 ap</item>
 </resources>
